applauncherd (0.30.1) unstable; urgency=low

  * Changes: Modify test applications to use _exit().

 -- Pertti Kellomaki <pertti.kellomaki@nokia.com>  Wed, 8 Jun 2011 13:36:37 +0300

applauncherd (0.30.0) stable; urgency=low

  * Fixes: NB#261960 - [TASK] "Invoker" should be able to launch applications even when "applauncherd" is not running
  * Changes: boosted application debug documentation updated 

 -- Alexey Shilov <alexey.shilov@nokia.com>  Mon, 06 Jun 2011 15:09:02 +0300

applauncherd (0.29.9) stable; urgency=low

  * Fixes: NB#247707 - Invoker interferes with qttas plugin loading for qml applications
  * Implemented: SWP#DUI-5353

 -- Pertti Kellomaki <pertti.kellomaki@nokia.com>  Wed, 25 May 2011 14:18:05 +0300

applauncherd (0.29.8) stable; urgency=low

  * Fixes: NB#231286 - Launcher daemon doesn't link the libraries so that they could be prelinked
  * Changes: Highlighted applauncherd dependency with debian packages in documentation.

 -- Olli Leppanen <olli.leppanen@nokia.com>  Mon, 23 May 2011 15:42:28 +0300


applauncherd (0.29.7) stable; urgency=low

  * Changes: Remove deprecated library (see NB#231286, comment 54).
  * Changes: Refactoring of testability plug-in loading
  * Changes: Corrected path names in documentation
  * Fixes: NB#250404 - Unable to create non-native single-instance applications with /usr/bin/single-instance or /usr/bin/invoker

 -- Alexey Shilov <alexey.shilov@nokia.com>  Thu, 12 May 2011 16:43:38 +0300

applauncherd (0.29.6) stable; urgency=low

  * Changes: Corrected doxygen grouping in documentation	
  * Changes: Added a command to run cpu in full speed to perf tests
  * Fixes: NB#254878 - COREWEB: /usr/bin/camera-ui.launch 'AppData::deleteArgv Booster::launchProcess' 
  * Implemented: SWP#DUI-5313, SWP#DUI-5315

 -- Nimika Keshri <nimika.1.keshri@nokia.com>  Thu, 12 May 2011 11:34:15 +0300

applauncherd (0.29.5) stable; urgency=low

  * Fixes: NB#250971 - a booster is wasted with --single-instance
