@@ -1,5 +1,6 @@
 applauncherd (0.30.1) unstable; urgency=low
 
+  * Changes: Deprecate MDeclarativeCache::applicationDirPath() and MDeclarativeCache::applicationFilePath().
   * Changes: Modify test applications to use _exit().
 
  -- Pertti Kellomaki <pertti.kellomaki@nokia.com>  Wed, 8 Jun 2011 13:36:37 +0300
